src/test/ui/unboxed-closures/unboxed-closure-sugar-region.stderr
warning: lifetime parameter `'a` never used
  --> $DIR/unboxed-closure-sugar-region.rs:21:9
   |
LL | fn test<'a,'b>() {
   |         ^^-
   |         |
   |         help: elide the unused lifetime
   |
   = note: `#[warn(unused_lifetimes)]` on by default

warning: lifetime parameter `'b` never used
  --> $DIR/unboxed-closure-sugar-region.rs:21:12
   |
LL | fn test<'a,'b>() {
   |           -^^
   |           |
   |           help: elide the unused lifetime

error[E0107]: wrong number of lifetime arguments: expected 1, found 0
  --> $DIR/unboxed-closure-sugar-region.rs:30:51
   |
LL | fn test2(x: &dyn Foo<(isize,),Output=()>, y: &dyn Foo(isize)) {
   |                                                   ^^^^^^^^^^ expected 1 lifetime argument

error: aborting due to previous error

For more information about this error, try `rustc --explain E0107`.
